# fwsifs

./: .gitignore  README.md  setup.cfg  tmp.py
data/subject3/: info.yml
simulations/cse_ff_prediction/: cse_ff_prediction.py  cse_ff_prediction_full.py  medians.txt
simulations/cse_ff_preduction/: cse_ff_prediction.py
simulations/microstructure/: microstructure_gen.py  microstructure_plot.py
src/fwsifs/: cli.py  fwsifs.py  nlls.py  pmath.py  romeo.py
