[metadata]
name = fwsifs
description = Fat-water separation with susceptibility-induced frequency shift and dual transverse relaxation
version = 0.1.dev1

[options]
python_requires = >=3.12
install_requires = 
    click
    numpy
    scipy
    numba
    numexpr
    iomed @ git+https://github.com/py-baudin/iomed.git
package_dir = 
    =src
packages = fwsifs

[options.entry_points]
console_scripts =
    fwsifs = fwsifs.cli:cli